# kaizen

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  KNOWN_LIMITATIONS.md  QUALITY_VALIDATION.md  README.md  RERANKER_BENCHMARK.md  RERANKER_QUALITY.md  ROADMAP.md  ROADMAP_V2.md  api.py  app.py  benchmark.py  benchmark_reranker.py  ingest.py  pyproject.toml  query.py  validate_quality.py  validate_reranker.py
kaizen front/: index.html  package-lock.json  package.json
kaizen front/src/: App.jsx  index.css
rag/: chunker.py  config.py  index_registry.py  llm.py  loader.py  model_registry.py  monitoring.py  orchestrator.py  pipeline.py  retriever.py  store.py
src/suyven_rag/: api.py  app.py  query.py
src/suyven_rag/finetune/: ab_test.py  data_gen.py  data_gen_selfsup.py  data_gen_v2.py  dataset.py  domain_finetune.py  entity_pairs.py  eval_suite.py  evaluate.py  experiment.py  intrinsic_eval.py  lora.py  optimizations.py  train.py
src/suyven_rag/rag/: agents.py  bench_metrics.py  config.py  domain_registry.py  eval.py  gap_tracker.py  index_registry.py  llm.py  loader.py  model_registry.py  observability.py  orchestrator.py  security.py  self_improve.py  store.py  vector_store.py
tests/: test_agents.py  test_api_integration.py  test_bench_metrics.py  test_config.py  test_domain_finetune.py  test_eval.py  test_index_registry.py  test_lora.py  test_model_registry.py  test_observability.py  test_orchestrator.py  test_security.py
